--- a/Warhammer/40k_calc.html
+++ b/Warhammer/40k_calc.html
@@ -1839,13 +1839,13 @@ Keywords: Character Epic Hero Faction: Tyranids Great Devourer Hive Tyrant Monst
             }
             log(`Max hits ${max_hits}`)
             html += `Average ${(damage / times).toFixed(2)} damage; ${(damage / times / W).toFixed(2)} kills.`
-            html += `<br><table border=1><tr><th>Damage</th><th>Count</th><th>%</th></tr>`
+            html += `<br><table border=1><tr><th>Wounds</th><th>Hits</th><th>%</th></tr>`
             for (let weapon in weapon_spreads) {
                 html += `<tr><th colspan=4>${weapon}</th></tr>`
                 const spread = weapon_spreads[weapon]
                 for (let mw in spread) {
-                    let hit_ratio = spread[mw] / times
-                    html += `<tr><td>${mw}<td>${spread[mw]}</td><td>${(hit_ratio * 100).toFixed(2)}%</td><td><div style="width: ${hit_ratio / max_hits * 200}px; background-color: red; border: 0.5em solid green"> </div></td></tr>`
+                    const hits = spread[mw]
+                    html += `<tr><td>${mw}<td>${hits}</td><td>${(hits / times * 100).toFixed(2)}%</td><td><div style="width: ${hits / max_hits * 200}px; background-color: red; border: 0.5em solid green"> </div></td></tr>`
                 }
             }
             result.innerHTML = html + "</table>"
