--- a/Warhammer/40k_calc.html
+++ b/Warhammer/40k_calc.html
@@ -1980,7 +1980,7 @@ Keywords: Character Epic Hero Faction: Tyranids Great Devourer Hive Tyrant Monst
 				for (let mw in spread) if (spread[mw] > max_hits) max_hits = spread[mw]
 			}
 			html += `Average ${(damage / times).toFixed(2)} damage; ${(damage / times / W).toFixed(2)} kills.`
-			html += `<br><table border=1><tr><th>Wounds</th><th>Hits</th><th>%</th></tr>`
+			html += `<br><table border=1><tr><th>Wounds</th><th>Hits</th><th colspan=2>%</th></tr>`
 			for (let weapon in weapon_spreads) {
 				html += `<tr><th colspan=4>${weapon}</th></tr>`
 				const spread = weapon_spreads[weapon]
@@ -1989,7 +1989,7 @@ Keywords: Character Epic Hero Faction: Tyranids Great Devourer Hive Tyrant Monst
 					html += `<tr><td>${mw}<td>${hits}</td><td>${(hits / times * 100).toFixed(2)}%</td><td><div style="width: ${hits / max_hits * 200}px; height: 10px;background-color: green"> </div></td></tr>`
 				}
 			}
-			result.innerHTML = html + "</table>"
+			result.innerHTML = html + "</table><br>"
 		}
 
 		document.onpaste = (event) => {
