--- a/Warhammer/40k_calc.html
+++ b/Warhammer/40k_calc.html
@@ -1656,7 +1656,7 @@ Keywords: Character; Epic Hero; Faction: Tyranids; Great Devourer; Hive Tyrant; 
 			let target_rules = gets("target_rules").toUpperCase().split(SPLIT).join(SEP)
 			const T = parseInt(toughness.value)
 			let SV = parseInt(save.value)
-			if (source_abilities.includes("ARTIFICER ARMOUR")) {
+			if (target_abilities.includes("ARTIFICER ARMOUR")) {
 				log("Artificer Armour: Adeptus Astartes model only. The bearer has a Save characteristic of 2+ and the Feel No Pain 5+ ability.")
 				SV = 2
 				source_abilities.push("FEEL NO PAIN 5")
@@ -1734,7 +1734,6 @@ Keywords: Character; Epic Hero; Faction: Tyranids; Great Devourer; Hive Tyrant; 
 				if (source_abilities.includes("FIRE DISCIPLINE") && R > 2) {
 					weapon_keywords.push("SUSTAINED HITS 1")
 					log(`FIRE DISCIPLINE: Adeptus Astartes model only. While the bearer is leading a unit, ranged weapons equipped by models in that unit have the [SUSTAINED HITS 1] ability. In addition, while the bearer’s unit is under the effects of the Devastator Doctrine, you can reroll Advance rolls made for that unit.`)
-					}
 				}
 				if (inches < 18 && source_abilities.includes("GLOVODAN PSYBER-EAGLE")) {
 					log("Glovodan Psyber-eagle ignoring cover < 18\"")
